--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint-md": "lint-md src/README.md",
-    "fix-md": "lint-md src/README.md --fix"
+    "fix-md": "lint-md src/README.md --fix",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,8 @@
     "article/**/*.{md,markdown}": [
       "lint-md"
     ]
+  },
+  "devDependencies": {
+    "all-contributors-cli": "^6.20.0"
   }
 }
