Add @Usualminds as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,16 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Usualminds",
+      "name": "Joe",
+      "avatar_url": "https://avatars.githubusercontent.com/u/19425902?v=4",
+      "profile": "https://github.com/Usualminds",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
