--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,6 +28,15 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "Jouryjc",
+      "name": "Jouryjc",
+      "avatar_url": "https://avatars.githubusercontent.com/u/11925053?v=4",
+      "profile": "https://github.com/Jouryjc",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
