feat: 自动化贡献者名单和记录

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,10 +11,10 @@
   "commitConvention": "none",
   "contributors": [
     {
-      "login": "test",
-      "name": "test",
-      "avatar_url": "https://avatars.githubusercontent.com/u/383316?v=4",
-      "profile": "https://github.com/test",
+      "login": "Jouryjc",
+      "name": "Jouryjc",
+      "avatar_url": "https://avatars.githubusercontent.com/u/11925053?v=4",
+      "profile": "https://github.com/Jouryjc",
       "contributions": [
         "doc"
       ]
@@ -30,10 +30,10 @@
       ]
     },
     {
-      "login": "Jouryjc",
-      "name": "Jouryjc",
-      "avatar_url": "https://avatars.githubusercontent.com/u/11925053?v=4",
-      "profile": "https://github.com/Jouryjc",
+      "login": "coolyuantao",
+      "name": "zhangyuantao",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3478550?v=4",
+      "profile": "https://github.com/coolyuantao",
       "contributions": [
         "doc"
       ]
