feat: commit record

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "weekly",
-  "projectOwner": "IDux",
+  "projectOwner": "IDuxFE",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
