feat: CI/CD 文章格式调整，添加contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -37,6 +37,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "clfeng",
+      "name": "clfeng",
+      "avatar_url": "https://avatars.githubusercontent.com/u/20736207?v=4",
+      "profile": "https://github.com/clfeng",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
