--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -46,6 +46,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "wongtsuizhen",
+      "name": "wongtsuizhen",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6890343?v=4",
+      "profile": "https://github.com/wongtsuizhen",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
