Add @manchixue as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -64,6 +64,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "manchixue",
+      "name": "xuemanchi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/31590999?v=4",
+      "profile": "https://github.com/manchixue",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
