Add @rhinonan as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -73,6 +73,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "rhinonan",
+      "name": "卡猫司机",
+      "avatar_url": "https://avatars.githubusercontent.com/u/9367487?v=4",
+      "profile": "https://github.com/rhinonan",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
