--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "devDependencies": {
-    "all-contributors-cli": "^6.20.0"
+    "all-contributors-cli": "^6.20.0",
+    "lint-staged": "^11.1.2"
   }
 }
