--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "lint-staged": {
     "article/**/*.{md,markdown}": [
-      "lint-md --fix"
+      "lint-md"
     ]
   },
   "devDependencies": {
