Add @lwh2015 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -82,6 +82,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "lwh2015",
+      "name": "HWJY",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16028333?v=4",
+      "profile": "https://github.com/lwh2015",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
