--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,7 +53,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6890343?v=4",
       "profile": "https://github.com/wongtsuizhen",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
