Update @Usualminds as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -26,7 +26,8 @@
       "profile": "https://github.com/Usualminds",
       "contributions": [
         "code",
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
