Update @coolyuantao as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,7 +36,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3478550?v=4",
       "profile": "https://github.com/coolyuantao",
       "contributions": [
-        "doc"
+        "doc",
+        "review"
       ]
     },
     {
