--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/11925053?v=4",
       "profile": "https://github.com/Jouryjc",
       "contributions": [
-        "doc"
+        "doc",
+        "review"
       ]
     },
     {
