--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,7 +28,8 @@
       "contributions": [
         "code",
         "doc",
-        "translation"
+        "translation",
+        "review"
       ]
     },
     {
