Revert "feat: 更新 readme"

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,8 +16,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/11925053?v=4",
       "profile": "https://github.com/Jouryjc",
       "contributions": [
-        "doc",
-        "review"
+        "doc"
       ]
     },
     {
@@ -26,9 +25,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/19425902?v=4",
       "profile": "https://github.com/Usualminds",
       "contributions": [
-        "doc",
-        "translation",
-        "review"
+        "code",
+        "doc"
       ]
     },
     {
@@ -37,8 +35,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3478550?v=4",
       "profile": "https://github.com/coolyuantao",
       "contributions": [
-        "doc",
-        "review"
+        "doc"
       ]
     },
     {
@@ -56,8 +53,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6890343?v=4",
       "profile": "https://github.com/wongtsuizhen",
       "contributions": [
-        "doc",
-        "translation"
+        "doc"
       ]
     },
     {
@@ -74,24 +70,6 @@
       "name": "xuemanchi",
       "avatar_url": "https://avatars.githubusercontent.com/u/31590999?v=4",
       "profile": "https://github.com/manchixue",
-      "contributions": [
-        "doc"
-      ]
-    },
-    {
-      "login": "rhinonan",
-      "name": "卡猫司机",
-      "avatar_url": "https://avatars.githubusercontent.com/u/9367487?v=4",
-      "profile": "https://github.com/rhinonan",
-      "contributions": [
-        "doc"
-      ]
-    },
-    {
-      "login": "lwh2015",
-      "name": "HWJY",
-      "avatar_url": "https://avatars.githubusercontent.com/u/16028333?v=4",
-      "profile": "https://github.com/lwh2015",
       "contributions": [
         "doc"
       ]
