--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -95,6 +95,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "fengxiaodong28",
+      "name": "FENG/XIAODONG",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25543284?v=4",
+      "profile": "https://github.com/fengxiaodong28",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
