Add @Levix as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -104,6 +104,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Levix",
+      "name": "Zhiwei Li",
+      "avatar_url": "https://avatars.githubusercontent.com/u/65117011?v=4",
+      "profile": "https://github.com/Levix",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
