--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -111,7 +111,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/65117011?v=4",
       "profile": "https://github.com/Levix",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     }
   ],
