Add @JW-LINNN  and @AFine970  as contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -123,6 +123,24 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "JW-LINNN",
+      "name": "JW-LINNN",
+      "avatar_url": "https://avatars.githubusercontent.com/u/92379828?v=4",
+      "profile": "https://github.com/JW-LINNN",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "AFine970",
+      "name": "AFine970",
+      "avatar_url": "https://avatars.githubusercontent.com/u/37992787?v=4?v=4",
+      "profile": "https://github.com/AFine970",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
