Add @jiayinkong as contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -150,6 +150,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "jiayinkong",
+      "name": "jiayinkong",
+      "avatar_url": "https://avatars.githubusercontent.com/u/73403506?v=4",
+      "profile": "https://github.com/jiayinkong",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
